energy/maj5_celltest/nohup.out
  File "5maj_energy.inp", line 1
    **** **** **** **** **** **** **** **** **** **** **** 
    ^
SyntaxError: invalid syntax
